Bug 1381819 - Align exception/xhr/group arrows with ones in ObjectInspector; r=bgrins.
We now use the same image for the arrow, and the console component which render
this arrow was changed for consistency with the objectInspector naming.
Some alignment properties needed to be changed so everything lines up perfectly.
Tests were updated to match the new arrow classnames.

MozReview-Commit-ID: 2JFAyv8YbTa

UltraBlame original commit: d1b2a8d328b938d607e055f35cf028db07398f29

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -7059,16 +7059,211 @@ webconsole
 output
 -
 wrapper
+img
 .
-object
+collapse
 -
-inspector
+button
 .
-tree
-.
-tree
+arrow
+{
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+devtools
 -
-node
+components
+/
+arrow
+.
+svg
+"
+)
+no
+-
+repeat
+;
+mask
+-
+size
+:
+100
+%
+;
+width
+:
+9px
+;
+height
+:
+9px
+;
+margin
+-
+block
+-
+start
+:
+5px
+;
+margin
+-
+inline
+-
+start
+:
+4px
+;
+margin
+-
+inline
+-
+end
+:
+1px
+;
+transform
+:
+rotate
+(
+-
+90deg
+)
+;
+transition
+:
+transform
+0
+.
+125s
+ease
+;
+}
+.
+webconsole
+-
+output
+-
+wrapper
+.
+message
+.
+startGroup
+img
+.
+collapse
+-
+button
+.
+arrow
+.
+webconsole
+-
+output
+-
+wrapper
+.
+message
+.
+startGroupCollapsed
+img
+.
+collapse
+-
+button
+.
+arrow
+{
+margin
+-
+inline
+-
+start
+:
+2px
+;
+}
+html
+[
+dir
+=
+"
+rtl
+"
+]
+.
+webconsole
+-
+output
+-
+wrapper
+img
+.
+collapse
+-
+button
+.
+arrow
+:
+not
+(
+.
+expanded
+)
+{
+transform
+:
+rotate
+(
+90deg
+)
+;
+}
+.
+webconsole
+-
+output
+-
+wrapper
+img
+.
+collapse
+-
+button
+.
+arrow
+.
+expanded
+{
+transform
+:
+rotate
+(
+0deg
+)
+;
+}
+.
+webconsole
+-
+output
+-
+wrapper
+.
+message
+img
 .
 arrow
 {
@@ -7091,15 +7286,8 @@ output
 -
 wrapper
 .
-object
--
-inspector
-.
-tree
-.
-tree
--
-node
+message
+img
 .
 arrow
 {
